--- a/html-md-01.css
+++ b/html-md-01.css
@@ -1,31 +1,31 @@
 /* html-md-01.css */
 
-div#TOC li {
+#TOC li {
   list-style-type: none;
   list-style-position: outside;
   list-style-image: none;
   background-image: none;
-  background-position: 0px center;
+  background-position: 0 center;
 }
 
 .navbar-brand, .navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse, .pre-scrollable {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 18px;
-  font-weight: normal;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 /* exercise */
 body, td {
-   font-family: Times, TimesNewRoman, serif;
+   font-family: Arial, Helvetica, sans-serif;
    background-color: white;
-   font-size: 16px;
+   font-size: 14px;
    margin: 30px;
    text-align:justify;
 }
 
 /*/* web page */
 /*body, td {
-  font-family: Times, TimesNewRoman, serif;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: white;
   font-size: 16px;
   font-weight: normal;
@@ -46,45 +46,45 @@ tt, code, pre {
 }
 
 h1 {
-  font-family: "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
-  font-weight: normal;
+  font-weight: bolder;
 }
 
 h1.title {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 26px;
-  font-weight: normal;
+  font-weight: bold;
 }
 
 h2 {
-  font-family: "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
-  font-weight: normal;
+  font-weight: bold;
 }
 
 h3 {
-  font-family: "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-weight: normal;
   font-style: italic;
 }
 
 h4 {
-  font-family: "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-weight: bold;
 }
 
 h5 {
-  font-family: "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-weight: bold;
   font-style: italic;
 }
 
 h6 {
-  font-family: "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: bolder;
 }
@@ -127,7 +127,7 @@ blockquote {
    padding-right: 1em;
    border-left: 0.5em #E0E0E0 solid;
    border-right: 0.5em #E0E0E0 solid
-  font-family: Times, TimesNewRoman, serif;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: white;
   font-size: 16px;
   font-weight: normal;
@@ -152,7 +152,7 @@ hr {
     filter: none !important;
   }
   body, td {
-    font-family: Times, TimesNewRoman, serif;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: white;
     font-size: 13px;
     font-weight: normal;
@@ -162,7 +162,7 @@ hr {
     text-align:justify;
   }
   h1 {
-    font-family: "Times New Roman", Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     font-weight: normal;
   }
@@ -172,29 +172,29 @@ hr {
     font-weight: normal;
   }
   h2 {
-    font-family: "Times New Roman", Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-weight: normal;
   }
   h3 {
-    font-family: "Times New Roman", Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-weight: normal;
     font-style: italic;
   }
   h4 {
-    font-family: "Times New Roman", Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: bold;
   }
   h5 {
-    font-family: "Times New Roman", Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: bold;
     font-style: italic;
   }
   h6 {
-    font-family: "Times New Roman", Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     font-weight: bolder;
   }
